--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
 %html
   %head
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
+    %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0' }
     %title= @page_title.blank? ? 'PassMaster' : "#{@page_title} - PassMaster"
     /[if lt IE 9]
       %script{ :src => 'https://html5shim.googlecode.com/svn/trunk/html5.js', :type => 'text/javascript' }
@@ -11,11 +12,4 @@
     = csrf_meta_tags
 
   %body
-    .flash
-      - [ :info, :warning, :success, :error ].each do |type|
-        - if flash[type].present?
-          %p= flash[type]
-    .container
-      = yield
-    %script{ :type => 'text/javascript' }
-      = yield :page_javascript
+    = yield
