--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -4,6 +4,6 @@
     %p A simple tool for storing all your account credentials securely with a single master password.
     .pushed-down
       %p Just enter your email address to access your accounts, or to get started.
-      = form_tag(users_path, :remote => true, :format => :json, :id => 'account_access') do
+      = form_tag(users_path, :remote => true, :format => :json, :id => 'account_access_form') do
         %p= text_field_tag(:email, '', :placeholder => 'Email Address', :class => 'input-xlarge', :id => 'account_access_field')
         %p= submit_tag('Access Accounts', :class => 'btn btn-primary btn-large', :id => 'account_access_btn')
