--- a/app/views/application/_verify.html.haml
+++ b/app/views/application/_verify.html.haml
@@ -1,9 +1,11 @@
 .container#verify{ :style => 'display:none;' }
   .well
-    %h1#verification_email
+    %h1
+      Verify
+      %small#verify_email_placeholder
     %p You need to verify your email address to use Passmaster.
     .pushed-down
       %p Enter your verification code below.
-      = form_tag(users_path, :method => :put, :remote => true, :format => :json, :id => 'verification_form') do
-        %p= text_field_tag(:verification_code, '', :placeholder => 'Verification Code', :class => 'input-xlarge', :id => 'verification_field')
-        %p= submit_tag('Verify', :class => 'btn btn-primary btn-large', :id => 'verification_btn')
+      = form_tag(users_path, :method => :put, :remote => true, :format => :json, :id => 'verify_form') do
+        %p= text_field_tag(:verification_code, '', :placeholder => 'Verification Code', :class => 'input-xlarge', :id => 'verify_field')
+        %p= submit_tag('Verify', :class => 'btn btn-primary btn-large', :id => 'verify_btn')
