--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
   %head
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
     %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0' }
-    %title PassMaster
+    %title Passmaster
     /[if lt IE 9]
       %script{ :src => 'https://html5shim.googlecode.com/svn/trunk/html5.js', :type => 'text/javascript' }
     = stylesheet_link_tag 'application'
