--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+#accounts_list_search {
+  margin: 0;
+}
+
 #account_tiles {
   text-align: left;
   -moz-column-count: 3;
@@ -13,11 +17,6 @@
   column-count: 3;
   column-gap: 10px;
   column-fill: auto;
-  @media (min-width: 1200px) {
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
-  }
   @media (max-width: 767px) {
     -moz-column-count: 2;
     -webkit-column-count: 2;
@@ -39,6 +38,10 @@
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
+  }
+
+  form,input[type='text'],textarea {
+    margin: 0;
   }
 
   .account {
