--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -7,31 +7,47 @@
 
     #unlock_accounts{ :style => 'display:none;' }
       %p Accounts are locked. Enter the master password to unlock.
-      = form_tag('#', :id => 'unlock_accounts_form') do
+      %form{ :id => 'unlock_accounts_form' }
         %p= password_field_tag(:passwd, '', :placeholder => 'Master Password', :class => 'input-xlarge', :id => 'unlock_accounts_field')
         %p= submit_tag('Unlock', :class => 'btn btn-primary btn-large', :id => 'unlock_accounts_btn')
 
   #accounts_list{ :style => 'display:none;' }
-    %p= text_field_tag(:search, '', :placeholder => 'Search', :class => 'input-xlarge', :id => 'accounts_list_search')
+    %p
+      = link_to('Add Account', '#', :class => 'btn btn-success btn-small', :id => 'add_account_btn')
+      = text_field_tag(:search, '', :placeholder => 'Search', :class => 'input-medium', :id => 'accounts_list_search')
     #account_tiles
       .account-tile.template{ :style => 'display:none;' }
-        .account
-          %strong
-            A:
-            %span
-        .pull-left
-          .info
-            .username
-              U:
+        .read
+          .account
+            %strong
+              A:
               %span
-            .password
-              P:
-              %a{ :href => '#', 'data-password' => 'passwd' } show
-              %span
-        .pull-right
-          .links
-            %a.btn.btn-primary.btn-small.edit{ :href => '#' } Edit
-            %a.btn.btn-danger.btn-small.delete{ :href => '#' } Delete
-        .clearfix
-        .notes
-          %pre
+          .pull-left
+            .info
+              .username
+                U:
+                %span
+              .password
+                P:
+                %a{ :href => '#', 'data-password' => 'true' } show
+                %span
+          .pull-right
+            .links
+              %a.btn.btn-primary.btn-small{ :href => '#', 'data-edit' => 'true' } Edit
+              %a.btn.btn-danger.btn-small{ :href => '#', 'data-delete' => 'true' } Delete
+          .clearfix
+          .notes
+            %pre
+        .write
+          %form
+            %p.account
+              %input{ :type => :text, :name => :account, :placeholder => 'Account Name' }
+            %p.username
+              %input{ :type => :text, :name => :username, :placeholder => 'Username' }
+            %p.password
+              %input{ :type => :text, :name => :password, :placeholder => 'Password' }
+            %p.notes
+              %textarea{ :name => :notes, :placeholder => 'Notes', :rows => '3' }
+            %p
+              %input.btn.btn-primary.btn-small{ :type => :submit, :name => :commit, :value => 'Save' }
+              %a.btn.btn-small{ :href => '#', 'data-cancel' => 'true' } Cancel
