--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -9,8 +9,8 @@
       %p Enter a strong master password below.
       %p.bold It is extremely important that you remember this password as it CANNOT be recovered!
       = form_tag('#', :id => 'configure_form') do
-        %p= password_field_tag(:passwd, '', :placeholder => 'Master Password', :class => 'input-xlarge', :id => 'configure_field')
-        %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm Master Password', :class => 'input-xlarge', :id => 'configure_field2')
+        %p= password_field_tag(:passwd, '', :placeholder => 'Master Password', :class => 'input-xlarge', :id => 'configure_field', :required => 'true')
+        %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm Master Password', :class => 'input-xlarge', :id => 'configure_field2', :required => 'true')
         %p= submit_tag('Set Master Password', :class => 'btn btn-primary btn-large', :id => 'configure_btn')
       = form_tag(users_path, :method => :put, :remote => true, :format => :json, :id => 'configure_hidden_form', :class => 'hidden') do
         = hidden_field_tag(:api_key, '', :id => 'configure_hidden_field')
