--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -14,13 +14,14 @@
     #unlock_accounts{ :style => 'display:none;' }
       %p Accounts are locked. Enter the master password to unlock.
       %form{ :id => 'unlock_accounts_form' }
-        %p= password_field_tag(:passwd, '', :placeholder => 'Master Password', :class => 'input-xlarge', :id => 'unlock_accounts_field', :required => 'true')
+        %p= password_field_tag(:passwd, '', :placeholder => 'Master Password', :class => 'input-xlarge', :id => 'unlock_accounts_passwd', :required => 'true')
         %p= submit_tag('Unlock', :class => 'btn btn-primary btn-large', :id => 'unlock_accounts_btn')
 
   #accounts_list{ :style => 'display:none;' }
     %p
       = link_to('Add Account', '#', :class => 'btn btn-success btn-small', :id => 'add_account_btn')
-      = text_field_tag(:search, '', :placeholder => 'Search', :class => 'input-medium', :id => 'accounts_list_search')
+      = link_to('Set Master Password', '#', :class => 'btn btn-inverse btn-small', :id => 'set_master_password_btn')
+    %p= text_field_tag(:search, '', :placeholder => 'Search', :class => 'input-xlarge', :id => 'accounts_list_search')
     #account_tiles
       .account-tile.template{ :style => 'display:none;' }
         .read
