--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -18,17 +18,14 @@
     margin: 0 10px 10px 0;
     padding: 8px;
     background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
   }
 
   form,input[type='text'],textarea {
-    margin: 0;
-  }
-
-  .account {
-    margin-bottom: 5px;
+    margin: 0 0 5px 0;
   }
 
   .links {
