password field layout

--- a/app/views/application/_password_generator.html.haml
+++ b/app/views/application/_password_generator.html.haml
@@ -1,4 +1,4 @@
 .password-generator
   .input-append
-    %input.input-medium{ :type => :text, :name => :password, :placeholder => 'Password' }
+    %input{ :type => :text, :name => :password, :placeholder => 'Password' }
     %button.btn{ :type => 'button', 'data-password-generator' => 'true' } Generate
