--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -1,4 +1,4 @@
-.container#overview{ :style => 'display:none;' }
+#overview.container{ :style => 'display:none;' }
   .well
     %h1 Passmaster
     %p A simple tool for storing all your account credentials securely with a single master password.
