--- a/app/views/application/_verify.html.haml
+++ b/app/views/application/_verify.html.haml
@@ -1,4 +1,4 @@
-.container#verify{ :style => 'display:none;' }
+#verify.container{ :style => 'display:none;' }
   .pull-right
     %a{ :href => '#', 'data-logout' => 'true' } Logout
   .clearfix
