--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
       %script{ :src => 'https://html5shim.googlecode.com/svn/trunk/html5.js', :type => 'text/javascript' }
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
+    = csrf_meta_tags
 
   %body
     = yield
