--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -67,4 +67,5 @@
           = form_tag(users_path, :method => :put, :remote => true, :id => nil) do
             = hidden_field_tag(:api_key, '', :id => nil, :class => 'api-key')
             = hidden_field_tag(:encrypted_data, '', :id => nil, :class => 'encrypted-data')
+            = hidden_field_tag(:schema_version, '', :id => nil, :class => 'schema-version')
     .clearfix
