--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -7,6 +7,9 @@
   .clearfix
 
   .well
+    .alert.alert-error.alert-read-only{ :style => 'display:none;' }
+      %h4 Read-only mode enabled
+
     %h1
       Accounts
       %small#accounts_email_placeholder
