add cookie drop at startup

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -2,3 +2,5 @@
 = render 'verify'
 = render 'configure'
 = render 'accounts'
+
+= link_to('', cookie_drop_path, :remote => true, :id => 'cookie_drop_link', :style => 'display:none;')
