make read-only apply everywhere

--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -1,5 +1,6 @@
 #overview.container{ :style => 'display:none;' }
   .well
+    = render 'read_only'
     %h1 Passmaster
     %p A simple tool for storing all your account credentials securely with a single master password.
     .pushed-down
