refactor cookie_drop -> init_session

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -3,4 +3,4 @@
 = render 'configure'
 = render 'accounts'
 
-= link_to('', cookie_drop_path, :remote => true, :id => 'cookie_drop_link', :style => 'display:none;')
+= link_to('', init_session_path, :remote => true, :id => 'init_session_link', :style => 'display:none;')
